--- a/integrations/react/src/App.css
+++ b/integrations/react/src/App.css
@@ -68,7 +68,8 @@ button:hover {
 }
 .field-container div {
   border: 1px solid;
-  padding: 4px 8px;
+  border-radius: 5px;
+  padding: 5px 10px;
   margin-top: 8px;
   height: 28px;
 }
