--- a/integrations/react-ts/src/App.css
+++ b/integrations/react-ts/src/App.css
@@ -12,6 +12,7 @@ h1 {
   margin: 0;
   padding: 25px 0;
 }
+
 div.container {
   display: flex;
   flex-direction: row;
@@ -50,28 +51,12 @@ button {
   min-height: 40px;
 }
 
-button:hover {
-  /* background-color: # */
-}
-
-#dropIn,
-#fullFeaturedCard,
-#wechat {
-  width: 540px;
-  margin: 48px auto;
-}
-
 .field-container {
   margin: 0 auto 16px;
   width: 300px;
 }
-.field-container div {
-  border: 1px solid;
-  padding: 4px 8px;
-  margin-top: 8px;
-  height: 28px;
-}
-div.label {
+
+div.field-label {
   text-align: left;
   border: 0;
 }
