refactor: [APAF-1316] migrate angular to eslint

--- a/integrations/angular/src/app/full-featured-card/full-featured-card.component.html
+++ b/integrations/angular/src/app/full-featured-card/full-featured-card.component.html
@@ -1,4 +1,4 @@
 <div>
-  <h2>Option #3: Full Featured Card integration</h2>
+  <h2>Full Featured Card integration</h2>
   <div id="fullFeaturedCard"></div>
 </div>
