--- a/integrations/angular/src/app/split-card/split-card.component.html
+++ b/integrations/angular/src/app/split-card/split-card.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h2>Option #4: Split Card element integration</h2>
+  <h2>Split Card element integration</h2>
   <div class="field-container">
     <div class="field-label">Card number</div>
     <div id="cardNumber"></div>
