--- a/integrations/angular/src/app/app.component.html
+++ b/integrations/angular/src/app/app.component.html
@@ -1,10 +1,12 @@
 <div class="App">
-  <h1>Airwallex payment demo - Angular</h1>
-  <div class="loading-container">
-    <router-outlet></router-outlet>
+  <h1>Airwallex Payment Demo - Angular</h1>
+  <div class="container">
+    <nav>
+      <h2>All Demos</h2>
+      <button *ngFor="let config of routes" on-mousedown="redirectTo(config.path)">{{config.linkTitle}}</button>
+    </nav>
+    <div class="payment-frame">
+      <router-outlet></router-outlet>
+    </div>
   </div>
-  <h2 style="margin-top: 100px">All Demos</h2>
-  <nav>
-    <button *ngFor="let config of routes" on-mousedown="redirectTo(config.path)">{{config.linkTitle}}</button>
-  </nav>
 </div>
