--- a/integrations/angular/src/styles.less
+++ b/integrations/angular/src/styles.less
@@ -1,6 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 .App {
-  font-family: "Avenir", Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
@@ -8,38 +7,76 @@
   margin-top: 60px;
 }
 
+h1 {
+  width: 100%;
+  border-bottom: 1px solid lightgrey;
+  margin: 0;
+  padding: 25px 0;
+}
+
+div.container {
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  justify-content: flex-start;
+  align-items: flex-start;
+  height: 90vh;
+}
+
+div.payment-frame {
+  width: 85vw;
+}
+
 nav {
   display: flex;
-  flex-flow: row wrap;
-  width: 640px;
-  max-width: 100vw;
+  flex-direction: column;
+  width: 15vw;
   align-items: center;
-  justify-content: space-between;
-  margin: auto;
+  justify-content: flex-start;
+  border-right: 1px solid lightgrey;
+  height: 100%;
 }
 
-nav a {
+button {
   margin: 10px;
-}
-
-#dropIn,
-#fullFeaturedCard,
-#wechat {
-  width: 540px;
-  margin: 48px auto;
+  padding: 5px 10px;
+  font-family: "Helvetica Neue";
+  font-weight: 500;
+  cursor: pointer;
+  background-color: #612fff;
+  color: #fff;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  min-width: 40px;
+  min-height: 40px;
 }
 
 .field-container {
   margin: 0 auto 16px;
   width: 300px;
 }
-.field-container div {
-  border: 1px solid;
-  padding: 4px 8px;
-  margin-top: 8px;
-  height: 28px;
-}
+
 div.field-label {
   text-align: left;
   border: 0;
+}
+
+body {
+  margin: 0;
+  font-family: "AxLLCircular";
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+@font-face {
+  src: url("https://checkout.airwallex.com/fonts/CircularXXWeb/CircularXXWeb-Bold.woff");
+  font-family: "AxLLCircular";
+  weight: "bold";
+}
+
+@font-face {
+  src: url("https://checkout.airwallex.com/fonts/CircularXXWeb/CircularXXWeb-Regular.woff2");
+  font-family: "AxLLCircular";
+  weight: "400";
 }
