refactor: [APAF-1316] enhanced angular demo

--- a/integrations/angular/src/app/app.component.html
+++ b/integrations/angular/src/app/app.component.html
@@ -1,3 +1,10 @@
+<!-- 
+  app.component.html
+  Airwallex Payment Demo - Angular.  Created by Roy Yang.
+
+  This file is the html template for the main demo app.
+  Contains the menu of buttons to each demo.
+ -->
 <div class="App">
   <h1>Airwallex Payment Demo - Angular</h1>
   <div class="container">
