--- a/integrations/angular/src/styles.less
+++ b/integrations/angular/src/styles.less
@@ -52,6 +52,11 @@ button {
   min-height: 40px;
 }
 
+nav button {
+  min-width: 150px;
+  max-width: 150px;
+}
+
 .field-container {
   margin: 0 auto 16px;
   width: 300px;
