--- a/integrations/angular/src/app/drop-in/drop-in.component.html
+++ b/integrations/angular/src/app/drop-in/drop-in.component.html
@@ -1,4 +1,17 @@
+<!-- 
+  drop-in.component.html
+  Airwallex Payment Demo - Angular.  Created by Roy Yang and Josie Ku.
+
+  This file is the html template for the DropIn component.
+ -->
 <div>
   <h2>DropIn integration</h2>
-  <div id="dropIn"></div>
+  <!-- Styling example below: show loading state -->
+  <p [style.display]="this.loading ? 'block' : 'none'">Loading...</p>
+  <!-- 
+    STEP 3a: Add an empty container for the dropin element to be placed into
+    - Ensure this is the only element in your document with this id, otherwise 
+      the element may fail to mount. 
+  -->
+  <div [style.display]="!this.loading ? 'block' : 'none'" id="dropIn"></div>
 </div>
