--- a/integrations/angular/src/app/full-featured-card/full-featured-card.component.html
+++ b/integrations/angular/src/app/full-featured-card/full-featured-card.component.html
@@ -1,4 +1,17 @@
+<!-- 
+  full-featured-card.component.html
+  Airwallex Payment Demo - Angular.  Created by Roy Yang and Josie Ku.
+
+  This file is the html template for the Full Featured Card component.
+ -->
 <div>
   <h2>Full Featured Card integration</h2>
-  <div id="fullFeaturedCard"></div>
+  <!-- Styling example below: show loading state -->
+  <p [style.display]="this.loading ? 'block' : 'none'">Loading...</p>
+  <!-- 
+    STEP 3a: Add an empty container for the fullFeaturedCard element to be placed into
+    - Ensure this is the only element in your document with this id, otherwise 
+      the element may fail to mount. 
+  -->
+  <div [style.display]="!this.loading ? 'block' : 'none'" id="fullFeaturedCard"></div>
 </div>
