--- a/integrations/cdn/style.css
+++ b/integrations/cdn/style.css
@@ -1,10 +1,22 @@
 body {
   font-family: 'AxLLCircular';
+  padding: 15px 25px;
+}
+
+span#code {
+  font-family: monospace;
+  background-color: lightgrey;
+  font-size: 16px;
+}
+
+div#links {
+  display: flex;
+  flex-direction: column;
 }
 
 button {
+  margin-top: 15px;
   font-family: 'AxLLCircular';
-  margin: 10px;
   padding: 5px 10px;
   font-weight: 500;
   cursor: pointer;
@@ -15,6 +27,34 @@ button {
   border-radius: 5px;
   min-width: 40px;
   min-height: 40px;
+}
+
+button:disabled {
+  opacity: 0.75;
+}
+
+p#error {
+  background: #ffebee;
+  border-radius: 5px;
+  padding: 5px 10px;
+  max-width: 400px;
+  display: none;
+}
+p#success {
+  background: lightgreen;
+  border-radius: 5px;
+  padding: 5px 10px;
+  max-width: 400px;
+  display: none;
+}
+
+p#author {
+  position: absolute;
+  bottom: 0;
+}
+
+.field-container {
+  margin: 15px 0px;
 }
 
 @font-face {
