docs: [APAF-1316] fix inconsistencies

--- a/integrations/angular/src/app/hpp/hpp.component.html
+++ b/integrations/angular/src/app/hpp/hpp.component.html
@@ -6,6 +6,6 @@
  -->
 <div>
   <h2>Hosted payment page (HPP) integration</h2>
-  <!-- STEP 2: Add a checkout button -->
+  <!-- STEP #2: Add a checkout button -->
   <button on-click="redirectHpp()">Redirect to HPP</button>
 </div>
