--- a/integrations/angular/src/styles.less
+++ b/integrations/angular/src/styles.less
@@ -1,4 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+/**
+ * styles.less
+ * Airwallex Payment Demo - Angular.  Created by Josie Ku.
+ *
+ * This file provides styling to the demo site.  This is not required for the integration.
+ */
+
 .App {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
