--- a/integrations/angular/src/app/card/card.component.html
+++ b/integrations/angular/src/app/card/card.component.html
@@ -9,15 +9,19 @@
   <!-- Styling example below: show loading state -->
   <p [style.display]="this.loading ? 'block' : 'none'">Loading...</p>
   <!-- Styling example below: only show field if element is ready -->
-  <div class="field-container" [style.display]="!this.loading ? 'block' : 'none'">
+  <div
+    class="field-container"
+    [style.display]="!this.loading ? 'block' : 'none'"
+  >
     <!-- 
-      STEP 3a: Add an empty container for the card element to be placed into
+      STEP #3a: Add an empty container for the card element to be placed into
       - Ensure this is the only element in your document with this id, otherwise 
         the element may fail to mount. 
     -->
     <div id="card"></div>
-    <!-- STEP 3b: Add a submit button to trigger the payment request -->
-    <button on-click="triggerConfirm()" [disabled]="isSubmitting"> <!-- [disabled] prevents incomplete submissions-->
+    <!-- STEP #3b: Add a submit button to trigger the payment request -->
+    <button on-click="triggerConfirm()" [disabled]="isSubmitting">
+      <!-- [disabled] prevents incomplete submissions-->
       <span *ngIf="!this.isSubmitting">Confirm</span>
       <span *ngIf="this.isSubmitting">Submitting...</span>
     </button>
