--- a/integrations/angular/src/app/drop-in/drop-in.component.html
+++ b/integrations/angular/src/app/drop-in/drop-in.component.html
@@ -9,7 +9,7 @@
   <!-- Styling example below: show loading state -->
   <p [style.display]="this.loading ? 'block' : 'none'">Loading...</p>
   <!-- 
-    STEP 3a: Add an empty container for the dropin element to be placed into
+    STEP #3a: Add an empty container for the dropin element to be placed into
     - Ensure this is the only element in your document with this id, otherwise 
       the element may fail to mount. 
   -->
