--- a/integrations/angular/src/app/split-card/split-card.component.html
+++ b/integrations/angular/src/app/split-card/split-card.component.html
@@ -7,11 +7,25 @@
 <div>
   <h2>Split Card element integration</h2>
   <!-- Styling example below: show loading state -->
-  <p [style.display]="this.cardNumberReady && this.cvcReady && this.expiryReady ? 'none' : 'block'">Loading...</p>
+  <p
+    [style.display]="
+      this.cardNumberReady && this.cvcReady && this.expiryReady
+        ? 'none'
+        : 'block'
+    "
+  >
+    Loading...
+  </p>
   <!-- Styling example below: only displays block when all elements are ready  -->
-  <div [style.display]="this.cardNumberReady && this.cvcReady && this.expiryReady ? 'block' : 'none'">
+  <div
+    [style.display]="
+      this.cardNumberReady && this.cvcReady && this.expiryReady
+        ? 'block'
+        : 'none'
+    "
+  >
     <!-- 
-      STEP 3a: Add an empty container for the split card elements to be placed into
+      STEP #3a: Add an empty container for the split card elements to be placed into
       - Ensure these are the only elements in your document with these id, otherwise 
         the elements may fail to mount. 
     -->
@@ -27,8 +41,9 @@
       <div class="field-label">Cvc</div>
       <div id="cvc"></div>
     </div>
-    <!-- STEP 3b: Add a submit button to trigger the payment request -->
-    <button on-click="triggerConfirm()" [disabled]="isSubmitting"> <!-- [disabled] prevents incomplete submissions-->
+    <!-- STEP #3b: Add a submit button to trigger the payment request -->
+    <button on-click="triggerConfirm()" [disabled]="isSubmitting">
+      <!-- [disabled] prevents incomplete submissions-->
       <span *ngIf="!isSubmitting">Confirm</span>
       <span *ngIf="isSubmitting">Submitting...</span>
     </button>
