--- a/integrations/react-ts/src/App.css
+++ b/integrations/react-ts/src/App.css
@@ -1,3 +1,10 @@
+/**
+ * App.css
+ * Airwallex Payment Demo - React Typescript.  Created by Josie Ku.
+ *
+ * This file provides styling to the demo site.  This is not required for the integration.
+ */
+
 .App {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
