--- a/integrations/angular/src/app/app.component.html
+++ b/integrations/angular/src/app/app.component.html
@@ -6,11 +6,18 @@
   Contains the menu of buttons to each demo.
  -->
 <div class="App">
-  <h1>Airwallex Payment Demo - Angular</h1>
+  <a href="/" style="text-decoration: none">
+    <h1>Airwallex Payment Demo - Angular</h1>
+  </a>
   <div class="container">
     <nav>
       <h2>All Demos</h2>
-      <button *ngFor="let config of routes" on-mousedown="redirectTo(config.path)">{{config.linkTitle}}</button>
+      <button
+        *ngFor="let config of routes"
+        on-mousedown="redirectTo(config.path)"
+      >
+        {{ config.linkTitle }}
+      </button>
     </nav>
     <div class="payment-frame">
       <router-outlet></router-outlet>
