--- a/integrations/angular/src/app/drop-in/drop-in.component.html
+++ b/integrations/angular/src/app/drop-in/drop-in.component.html
@@ -8,6 +8,13 @@
   <h2>DropIn integration</h2>
   <!-- Styling example below: show loading state -->
   <p [style.display]="this.loading ? 'block' : 'none'">Loading...</p>
+  <!-- Styling example below: show error message -->
+  <p
+    id="error"
+    [style.display]="this.errorMessage.length > 0 ? 'block' : 'none'"
+  >
+    {{ errorMessage }}
+  </p>
   <!-- 
     STEP #3a: Add an empty container for the dropin element to be placed into
     - Ensure this is the only element in your document with this id, otherwise 
