--- a/integrations/angular/src/app/full-featured-card/full-featured-card.component.html
+++ b/integrations/angular/src/app/full-featured-card/full-featured-card.component.html
@@ -8,10 +8,20 @@
   <h2>Full Featured Card integration</h2>
   <!-- Styling example below: show loading state -->
   <p [style.display]="this.loading ? 'block' : 'none'">Loading...</p>
+  <!-- Styling example below: show error message -->
+  <p
+    id="error"
+    [style.display]="this.errorMessage.length > 0 ? 'block' : 'none'"
+  >
+    {{ errorMessage }}
+  </p>
   <!-- 
     STEP 3a: Add an empty container for the fullFeaturedCard element to be placed into
     - Ensure this is the only element in your document with this id, otherwise 
       the element may fail to mount. 
   -->
-  <div [style.display]="!this.loading ? 'block' : 'none'" id="fullFeaturedCard"></div>
+  <div
+    [style.display]="!this.loading ? 'block' : 'none'"
+    id="fullFeaturedCard"
+  ></div>
 </div>
