--- a/integrations/angular/src/styles.less
+++ b/integrations/angular/src/styles.less
@@ -18,6 +18,7 @@ h1 {
   border-bottom: 1px solid lightgrey;
   margin: 0;
   padding: 25px 0;
+  color: #2c3e50 !important;
 }
 
 div.container {
@@ -41,6 +42,7 @@ nav {
   justify-content: flex-start;
   border-right: 1px solid lightgrey;
   height: 100%;
+  min-width: 175px;
 }
 
 button {
@@ -56,6 +58,10 @@ button {
   border-radius: 5px;
   min-width: 40px;
   min-height: 40px;
+}
+
+button:disabled {
+  opacity: 0.75;
 }
 
 nav button {
@@ -78,6 +84,30 @@ body {
   font-family: "AxLLCircular";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+p#error {
+  background: #ffebee;
+  border-radius: 5px;
+  padding: 5px 10px;
+  max-width: 400px;
+  margin: 15px auto;
+}
+
+div.instruction-container {
+  padding: 10px 50px;
+  text-align: left;
+}
+
+span#code {
+  font-family: monospace;
+  background-color: lightgrey;
+  font-size: 16px;
+  margin: 0px 5px;
+}
+
+p#bullet {
+  font-weight: bold;
 }
 
 @font-face {
