--- a/integrations/angular/src/app/redirect/redirect.component.html
+++ b/integrations/angular/src/app/redirect/redirect.component.html
@@ -1,11 +1,11 @@
 <!-- 
-  we-chat.component.html
-  Airwallex Payment Demo - Angular.  Created by Roy Yang and Josie Ku.
+  redirect.component.html
+  Airwallex Payment Demo - Angular.  Created by Josie Ku.
 
-  This file is the html template for the Wechat component.
+  This file is the html template for the Redirect component.
  -->
 <div>
-  <h2>Wechat element integration</h2>
+  <h2>Redirect element integration</h2>
   <!-- Styling example below: show loading state -->
   <p [style.display]="this.loading ? 'block' : 'none'">Loading...</p>
   <!-- Styling example below: show error message -->
@@ -16,9 +16,9 @@
     {{ errorMessage }}
   </p>
   <!-- 
-    STEP #3: Add an empty container for the wechat element to be placed into
+    STEP #3: Add an empty container for the redirect element to be placed into
     - Ensure this is the only element in your document with this id, otherwise 
       the element may fail to mount. 
   -->
-  <div [style.display]="!this.loading ? 'block' : 'none'" id="wechat"></div>
+  <div [style.display]="!this.loading ? 'block' : 'none'" id="redirect"></div>
 </div>
